@@ -1,3 +1,13 @@
+2007-08-07  Daniel Steffen  <das@users.sourceforge.net>
+
+	* unix/Makefile.in:	add support for compile flags specific to
+				object files linked directly into executables.
+
+	* unix/configure.in (Darwin): only use -seg1addr flag when prebinding;
+	use -mdynamic-no-pic flag for object files linked directly into exes.
+
+	* unix/configure: autoconf-2.13
+
 2007-07-25  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/tkMacOSXDialog.c (NavServicesGetFile): reset interp result on
